--- a/shippable.yml
+++ b/shippable.yml
@@ -7,7 +7,7 @@ integrations:
   # adding docker hub integration so that credentials are available to CI Job
   # http://docs.shippable.com/platform/integration/dockerRegistryLogin/
   hub:
-    - integrationName: drship_dockerhub
+    - integrationName: avinci_dh
       type: dockerRegistryLogin
 
 # use this to control what branches get built.
@@ -25,7 +25,7 @@ env:
     - TESTS_LOC_DIR=$SHIPPABLE_REPO_DIR/tests
     - MOD_LOC=$SHIPPABLE_REPO_DIR/node_modules/.bin/
     - DOCKER_REPO="node_app"
-    - DOCKER_ACC=devopsrecipes # {account name}
+    - DOCKER_ACC=avinci # {account name}
     - SHIP_IMG_RES=$DOCKER_REPO"_img_dh"
 
 build:
@@ -55,7 +55,7 @@ build:
 resources:
   - name: node_app_img_dh
     type: image
-    integration: drship_dockerhub # replace with your integration name
+    integration: avinci_dh # replace with your integration name
     versionTemplate:
       sourceName: "devopsrecipes/node_app" # replace with your Hub URL
       isPull: false
