--- a/shippable.yml
+++ b/shippable.yml
@@ -114,7 +114,9 @@ jobs:
   - name: test_kctl
     type: runSh
     steps:
+      - IN: app_manifest
       - IN: node_app_img_dh
+        switch: off
       - TASK:
           name: test
           runtime:
